# trading

./: .dockerignore  .gitignore  CHANGELOG.md  CLA.md  CLAUDE.md  CMakeLists.txt  COMMERCIAL.md  CONTRIBUTORS.md  Dockerfile  HEADS_TAILS_PLAN.md  LICENSE  PHASE3_DRIFT_STUDY.md  README.md  cleanup_stock_data.py  convert_weights.py  download_5y_data.py  download_daily.py  fees.py  inspect_trades.py  install_python.bat  install_python.sh  models.py  plot_training.py  prepare_models.py  production_v2.py  pyproject.toml  read_mt_log.py  requirements.txt  swap_symbols.py  swap_symbols.sh  training_lib.py  training_v2.py  training_v3.py  training_v4.cpp  training_v4.py  universe.json  universe.py  universe_acct0.py  universe_watchlist.json  update_shares.py  (+2 more)
.claude/: run_tests.sh  settings.json  update_changelog.sh
.github/workflows/: bump-version.yml
k8s/: cronjob-production.yaml  job-download.yaml  job-training.yaml  pv-app-state.yaml  pv-models-prod.yaml  pv-models-training.yaml  pv-stock-data.yaml  pvc-app-state.yaml  pvc-models-prod.yaml  pvc-models-training.yaml  pvc-stock-data.yaml  secret.yaml.template  setup.sh
tests/: test_fees.py  test_models.py  test_mt1.cpp  test_universe.py
